--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Blog da LolDesign
 email: contato@loldesign.com.br
-description: "Este é o blog da Loldesign. Somos um empresa que ama desenvolver software de uma forma fácil e divertida!"
+description: "Este é o blog da Loldesign. Somos uma empresa que ama desenvolver software de uma forma fácil e divertida!"
 baseurl: ""
 url: "http://blog.loldesign.com.br"
 
